Added my tech stack section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Graduate&family=Splash&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Aayush Pandey - Student & Developer</title>
   </head>
   <body>
     <div id="root"></div>
